// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeFooterView Component Renders correctly with no notifications 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 75,
        "paddingHorizontal": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 25,
          "marginTop": 35,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "marginTop": 25,
              "textAlign": "center",
            },
          ]
        }
      >
        Home.NoCredentials
      </Text>
    </View>
  </View>
</View>
`;

exports[`HomeFooterView Component Renders correctly with notifications 1`] = `
<View>
  <View
    style={
      Object {
        "paddingBottom": 75,
        "paddingHorizontal": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 25,
          "marginTop": 35,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "marginTop": 25,
              "textAlign": "center",
            },
          ]
        }
      >
        <Text>
          Home.YouHave
           
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            2
          </Text>
           
          Home.Credentials
           
          Home.InYourWallet
        </Text>
      </Text>
    </View>
  </View>
</View>
`;
